# AI-fashion-recommender

./: .gitignore  README.md  configs.py  pyproject.toml  requirements.txt
app/: demo.py
docs/: README.md
notebooks/: README.md  colab_run.py
scripts/: README.md  run_eval.py  run_index.py  run_prepare.py  run_train.py  smoke_test.py
src/aifashion/: __init__.py  configs.py  eval.py  index.py  model.py  rerank.py  train.py
src/aifashion/data/: __init__.py  captions.py  hub.py  prepare.py  webdataset.py
